--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "require-dev": {
         "phpunit/php-token-stream": "~1.2",
-        "phpunit/phpunit": "5.3.*"
+        "phpunit/phpunit": "5.6.3"
     },
     "autoload": {
         "psr-4": {
